hphp/test/slow/object_magic_method/objecttostring_fatal.php.expectf
==== explicit call ====
__toString called
string(6) "string"
==== explicit cast ====

Fatal error: Cannot convert object to string (got instance of C) in %s on line 19
